# flowpilot

./: .env.example  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  config.example.yaml  docs.md  main.py  pyproject.toml
ai_assistant_demo/: __init__.py  executor.py  factory.py  services.py  system_prompt.py  tools_definition.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/hosts/: page.tsx
frontend/app/jumps/: page.tsx
frontend/app/policies/: page.tsx
frontend/app/services/: page.tsx
frontend/components/: AuditDetailModal.tsx  HostServiceModal.tsx  LayoutWrapper.tsx  Sidebar.tsx
frontend/lib/: api.ts
src/flowpilot/: __init__.py
src/flowpilot/agent/: __init__.py  base.py  claude.py  conversation.py  executor.py  gemini.py  router.py  zhipu.py
src/flowpilot/audit/: logger.py  models.py  reporter.py
src/flowpilot/cli/: aliases.py  confirm.py  main.py
src/flowpilot/config/: loader.py  schema.py  ssh_importer.py  yaml_importer.py
src/flowpilot/core/: db.py  models.py  schemas.py
src/flowpilot/core/repositories/: __init__.py  base.py  host_repository.py  others.py
src/flowpilot/core/services/: __init__.py  audit_service.py  base.py  host_service.py  resource_service.py
src/flowpilot/mcp/: __init__.py  openai_compat.py  protocol.py  registry.py  rest_api.py  server.py  sse.py
src/flowpilot/mcp/handlers/: __init__.py  prompts.py  resources.py  tools.py
src/flowpilot/policy/: action_classifier.py  engine.py
src/flowpilot/tools/: base.py  config.py  git.py  logs.py  service.py  ssh.py
src/flowpilot/utils/: __init__.py  logging.py  retry.py  sensitive.py  time_parser.py
tests/: conftest.py
tests/integration/: test_mcp_http.py  test_mcp_server.py  test_openai_compat.py
tests/unit/: test_audit.py  test_config.py  test_policy.py  test_refactored_tools.py  test_sensitive.py  test_services.py  test_time_parser.py  test_tools.py
